# green-path-optimizer

./: .gitignore  Makefile  README.md  pyproject.toml  test.json
assets/: simulation_network_topology.drawio
assets/figures/: ioam_wireshark.drawio
config/generator/: bmv2_runtime_generator.py  grafana_config_generator.py  main.py
config/generator/resources/: large_network.yaml  large_network_1.yaml  large_network_2.yaml  large_network_bad_routing.yaml  large_network_good_routing.yaml  large_network_temp.yaml  small_network.yaml
config/generator/templates/: mininet_topology.j2
config/updater/: .gitignore  config.yaml  helpers.py  requirements.txt  updater.py
config/updater/bmv2_updater/: main.py
config/updater/inventory/: defaults.yaml  hosts_dev.yaml  hosts_simulation.yaml
config/updater/p4runtime_lib/: bmv2.py  switch.py
monitoring/: .env  README.md  docker-compose.yaml
monitoring/grafana/dashboards/: flow_statistics.json  hop_statistics.json  path_statistics.json  simulation_network_statistics.json
monitoring/grafana/envsubst/: datasource.yaml
monitoring/influx/: create_buckets.sh
monitoring/influx/envsubst/: create_buckets.sh
monitoring/telegraf/: telegraf.conf
network/p4/: main.p4
network/p4/includes/: constants.p4  externs.p4  ipfix_export.p4
network/utils/: influxapiclient.py  p4_mininet.py  p4runtime_switch.py  run_network.py  traffic_generator.py
optimizer/: README.md  optimizer.py  path_efficiency_entries.txt
optimizer/helpers/: convert.py
optimizer/influx/: helpers.py  influx_data_getter.py  queries.md  types.py
(+16 files in other folders)
